# PicoSensors

./: README.md
DekstopApp/: README.md  build.gradle.kts  settings.gradle.kts
DekstopApp/src/main/kotlin/: Main.kt
DekstopApp/src/main/kotlin/io/github/landrynorris/logic/: PicoSerialDevice.kt  SensorDetector.kt  SerialUtils.kt  UsbDeviceDetector.kt
DekstopApp/src/main/kotlin/io/github/landrynorris/logic/logic/: DeviceScreenComponent.kt  RootComponent.kt  UnknownPicoComponent.kt  VoltageComponent.kt
DekstopApp/src/main/kotlin/io/github/landrynorris/logic/sensors/: PicoSensor.kt  UnknownPicoSensor.kt  VoltageSensor.kt
DekstopApp/src/main/kotlin/io/github/landrynorris/logic/ui/: RootScreen.kt  VoltageScreen.kt
SensorClient/: README.md  build.gradle.kts  settings.gradle.kts
SensorClient/src/main/kotlin/: Main.kt
SensorClient/src/main/kotlin/io/github/landrynorris/logic/: PicoSerialDevice.kt  SensorDetector.kt  UsbDeviceDetector.kt
SensorClient/src/main/kotlin/io/github/landrynorris/logic/logic/: DeviceScreenComponent.kt  RootComponent.kt  UnknownPicoComponent.kt  VoltageComponent.kt
SensorClient/src/main/kotlin/io/github/landrynorris/logic/sensors/: PicoSensor.kt  UnknownPicoSensor.kt  VoltageSensor.kt
SensorClient/src/main/kotlin/io/github/landrynorris/logic/ui/: RootScreen.kt  VoltageScreen.kt
pico-sensors/: .gitignore  CMakeLists.txt  README.md  main.c  pico_import.cmake
pico-sensors/voltage_sensor/: CMakeLists.txt
pico-sensors/voltage_sensor/include/: voltage.h
pico-sensors/voltage_sensor/src/: main.c  voltage.c
